feat change skills field

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <li>React.js</li>
             <li>Redux</li>
             <li>TypeScript</li>
-            <li>Basic HTML</li>
-            <li>Basic CSS</li>
-            <li> Basic JavaScript</li>
+            <li>Middle HTML</li>
+            <li>Middle CSS</li>
+            <li> Middle JavaScript</li>
             <li>English Intermediate</li>
         </ul>
         <h2>My projects:</h2>
