feat: added widget for test

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 			</div>
 		</footer>
 	</div>
-
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1a9a6c96-32b7-4252-9d6d-4d14f611a704"></div>
 </body>
 
 </html>
